--- a/souko/templates/souko/home.html
+++ b/souko/templates/souko/home.html
@@ -3,21 +3,21 @@
 {% block content %}
   {% for item in items %}
     <article class="media content-section">
-      <img class="cover-art" src="{{ item.cover_art }}" alt="cover_art">
+      <img class="cover-art" src="{{ item.cover_art.url }}" alt="cover_art">
       <div class="media-body">
         <div class="content-title">
           <h2 class="pl-2">{{ item.title }}</h2>
         </div>
         <div class="content-data pl-2 pt-3">
           <p><span class="data-title">Series:</span>{{ item.series }}</p>
-          <p><span class="data-title">Genre:</span>{{ item.genre }}</p>
+          <p><span class="data-title">Genre:</span>{{ item.get_genre_display }}</p>
           {% if item.completed %}
             <p><span class="data-title">Status:</span><span class="content-completed">完了</span></p>
           {% else %}
             <p><span class="data-title">Status:</span><span class="content-inprogress">未完</span></p>
           {% endif %}
-          <p><span class="data-title">Date Started:</span>{{ item.date_started }}</p>
-          <p><span class="data-title">Date Completed:</span>{{ item.date_completed }}</p>
+          <p><span class="data-title">Date Started:</span>{{ item.date_started|date:"Y/m/d" }}</p>
+          <p><span class="data-title">Date Completed:</span>{{ item.date_completed|date:"Y/m/d" }}</p>
         </div>
       </div>
     </article>
