--- a/souko/static/souko/main.css
+++ b/souko/static/souko/main.css
@@ -24,6 +24,10 @@ body {
   margin-bottom: 50px;
 }
 
+.content-section:last-of-type {
+  margin-bottom: 35px;
+}
+
 .cover-art {
   margin-right: 30px;
   width: 180px;
@@ -66,4 +70,36 @@ body {
   color: #ececec;
   content: "\2718";
   margin-left: 5px;
+}
+
+.page_selector {
+  position: absolute;
+  left: 50%;
+  -ms-transform: translateX(-50%);
+  transform: translateX(-50%);
+}
+
+.page_selector a {
+  margin-bottom: 60px;
+}
+
+.btn-outline-orange {
+  color: #000000;
+  border-color: #000000;
+}
+
+.btn-outline-orange:hover {
+  color: #ffffff;
+  background-color:#ee8814;
+}
+
+.btn-orange {
+  color: #000000;
+  background-color:#ee8814;
+  border-color: #000000
+}
+
+.btn-orange:hover {
+  color: #ffffff;
+  background-color: #e27b04;
 }
