Reorganize html hierarchy

--- a/souko/templates/souko/base.html
+++ b/souko/templates/souko/base.html
@@ -38,11 +38,11 @@
     </nav>
 
     <div class="container main-body">
-      <div class="row">
-        <div class="col-md-9">
+      <!-- <div class="row">
+        <div class="col-md-9"> -->
           {% block content %}{% endblock %}
-        </div>
-      </div>
+        <!-- </div>
+      </div> -->
     </div>
 
     <!-- Optional JavaScript -->
