--- a/souko/templates/souko/home.html
+++ b/souko/templates/souko/home.html
@@ -2,7 +2,7 @@
 
 {% block heading %}
   {% if page_obj.number == 1 %}
-    <div>
+    <div class="mb-4">
       <h1>ようこそ！</h1>
     </div>
   {% endif %}
