--- a/souko/templates/souko/base.html
+++ b/souko/templates/souko/base.html
@@ -16,7 +16,7 @@
   <body>
     <nav class="navbar navbar-expand-md navbar-light bg-orange fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">My倉庫</a>
+        <a class="navbar-brand" href="/">My倉庫</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -24,21 +24,37 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <div class="navbar-nav mr-auto">
             <a class="nav-item nav-link" href="#">About</a>
-            <a class="nav-item nav-link" href="#">My List</a>
             <a class="nav-item nav-link" href="#">Statistics</a>
+            {% if user.is_authenticated %}
+              <a class="nav-item nav-link" href="#">My List</a>
+            {% endif %}
           </div>
 
           <div class="navbar-nav">
-            <a class="nav-item nav-link" href="#">Add Item</a>
-            <a class="nav-item nav-link" href="#">Profile</a>
-            <a class="nav-item nav-link" href="#">Logout</a>
+            {% if user.is_authenticated %}
+              <a class="nav-item nav-link" href="#">Profile</a>
+              <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
+            {% else %}
+              <a class="nav-item nav-link" href="{% url 'login' %}">Sign In</a>
+              <a class="nav-item nav-link" href="{% url 'register' %}">Register</a>
+            {% endif %}
           </div>
         </div>
       </div>
     </nav>
 
     <div class="container main-body">
-      {% block content %}{% endblock %}
+      <div class="row">
+        <div class="col-md-9">
+          {% if messages %}
+            {% for message in messages %}
+              <div class="alert alert-{{ message.tags }}">{{ message }}</div>
+            {% endfor %}
+          {% endif %}
+          
+          {% block content %}{% endblock %}
+        </div>
+      </div>
     </div>
 
     <!-- Optional JavaScript -->
