--- a/souko/templates/souko/base.html
+++ b/souko/templates/souko/base.html
@@ -9,6 +9,9 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/df3eabbc1c.js" crossorigin="anonymous"></script>
+
     <link rel="stylesheet" href="{% static 'souko/main.css' %}">
 
     <title>My倉庫</title>
