--- a/souko/templates/souko/user_list.html
+++ b/souko/templates/souko/user_list.html
@@ -1,9 +1,12 @@
 {% extends "souko/item_list.html" %}
 
 {% block heading %}
-  {% if page_obj.number == 1 %}
-    <div class="mb-4">
-      <h1>{{ view.kwargs.username }}'s List ({{ page_obj.paginator.count }} items)</h1>
+  <div class="user-list-title mb-3">
+    <h1>{{ view.kwargs.username }}'s List ({{ page_obj.paginator.count }} items)</h1>
+  </div>
+  {% if user.username == view.kwargs.username %}
+    <div class="add-item mb-4">
+      <a href="{% url 'souko-create' %}" class="btn btn-primary mr-2"><i class="fas fa-plus mr-2"></i>Add Item</a>
     </div>
   {% endif %}
 {% endblock heading %}
