Add date picker to item form

--- a/souko/templates/souko/item_form.html
+++ b/souko/templates/souko/item_form.html
@@ -13,5 +13,12 @@
         <button class="btn btn-outline-orange" type="submit">Confirm</button>
       </div>
     </form>
+    <script>
+      $(function () {
+        $(".date-picker").datepicker({
+          format:'dd/mm/yyyy',
+        });
+      });
+    </script>
   </div>
 {% endblock content %}
