--- a/souko/templates/souko/item_form.html
+++ b/souko/templates/souko/item_form.html
@@ -16,7 +16,7 @@
     <script>
       $(function () {
         $(".date-picker").datepicker({
-          format:'dd/mm/yyyy',
+          format:'yyyy/mm/dd',
         });
       });
     </script>
