--- a/souko/static/souko/main.css
+++ b/souko/static/souko/main.css
@@ -44,13 +44,13 @@ body {
   font-size: 1.8rem;
 }
 
-button.content-button {
+.content-button {
   visibility: hidden;
   margin: 3px;
   float: right;
 }
 
-.content-section:hover button.content-button {
+.content-section:hover .content-button {
   visibility: visible;
 }
 
