Add page selector to top of page

--- a/souko/templates/souko/item_list.html
+++ b/souko/templates/souko/item_list.html
@@ -1,15 +1,40 @@
 {% extends "souko/base.html" %}
 
 {% block content %}
-    <div class="user-list-title mb-4">
-      <h1>{{ view.kwargs.username }}'s List ({{ page_obj.paginator.count }} items)</h1>
+  <div class="user-list-title mb-4">
+    <h1>{{ view.kwargs.username }}'s List ({{ page_obj.paginator.count }} items)</h1>
+  </div>
+  <div class="mb-4">
+    {% block list_submenu %}{% endblock list_submenu %}
+    {% if user.username == view.kwargs.username %}
+      <a href="{% url 'item-create' %}" class="btn btn-primary add-item"><i class="fas fa-plus mr-2"></i>Add Item</a>
+    {% endif %}
+  </div>
+
+  {% if is_paginated %}
+    <div class="top-page-selector-container">
+      <div class="top-page-selector mb-4">
+        {% if page_obj.has_previous %}
+          <a class="btn btn-outline-orange" href="?page=1">&#x21E4</a>
+          <a class="btn btn-outline-orange" href="?page={{ page_obj.previous_page_number }}">&#x2190</a>
+        {% endif %}
+
+        {% for num in page_obj.paginator.page_range %}
+          {% if page_obj.number == num %}
+            <a class="btn btn-orange" href="?page={{ num }}">{{ num }}</a>
+          {% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'3' %}
+            <a class="btn btn-outline-orange" href="?page={{ num }}">{{ num }}</a>
+          {% endif %}
+        {% endfor %}
+
+        {% if page_obj.has_next %}
+          <a class="btn btn-outline-orange" href="?page={{ page_obj.next_page_number }}">&#x2192</a>
+          <a class="btn btn-outline-orange" href="?page={{ page_obj.paginator.num_pages }}">&#x21E5</a>
+        {% endif %}
+      </div>
     </div>
-    <div class="mb-4">
-      {% block list_submenu %}{% endblock list_submenu %}
-      {% if user.username == view.kwargs.username %}
-        <a href="{% url 'item-create' %}" class="btn btn-primary add-item"><i class="fas fa-plus mr-2"></i>Add Item</a>
-      {% endif %}
-    </div>
+  {% endif %}
+
   {% for item in items %}
   <article class="media content-section">
     <img class="cover-art" src="{{ item.cover_art.url }}" alt="cover_art">
@@ -60,8 +85,7 @@
 {% endfor %}
 
 {% if is_paginated %}
-
-  <div class="page_selector">
+  <div class="bottom-page-selector">
     {% if page_obj.has_previous %}
       <a class="btn btn-outline-orange" href="?page=1">&#x21E4</a>
       <a class="btn btn-outline-orange" href="?page={{ page_obj.previous_page_number }}">&#x2190</a>
@@ -80,6 +104,6 @@
       <a class="btn btn-outline-orange" href="?page={{ page_obj.paginator.num_pages }}">&#x21E5</a>
     {% endif %}
   </div>
-
 {% endif %}
+
 {% endblock content %}
