--- a/souko/static/souko/main.css
+++ b/souko/static/souko/main.css
@@ -101,14 +101,26 @@ body {
   cursor: pointer;
 }
 
-.page_selector {
+.top-page-selector-container {
+  width: 100%;
+  height: 55px;
+}
+
+.top-page-selector {
   position: absolute;
   left: 50%;
   -ms-transform: translateX(-50%);
   transform: translateX(-50%);
 }
 
-.page_selector a {
+.bottom-page-selector {
+  position: absolute;
+  left: 50%;
+  -ms-transform: translateX(-50%);
+  transform: translateX(-50%);
+}
+
+.bottom-page-selector a {
   margin-bottom: 60px;
 }
 
@@ -131,4 +143,8 @@ body {
 .btn-orange:hover {
   color: #ffffff;
   background-color: #e27b04;
+}
+
+.bg-r {
+  background-color: red;
 }
