--- a/souko/static/souko/main.css
+++ b/souko/static/souko/main.css
@@ -63,6 +63,11 @@ body {
   margin-right: 5px;
 }
 
+.content-completed,
+.content-inprogress {
+  font-size: smaller;
+}
+
 .content-completed {
   background-color: #01bb01;
   color: #ececec;
