--- a/souko/templates/souko/base.html
+++ b/souko/templates/souko/base.html
@@ -25,12 +25,12 @@
     <!-- My CSS -->
     <link rel="stylesheet" href="{% static 'souko/main.css' %}">
 
-    <title>My倉庫</title>
+    <title>MySouko</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-light bg-orange fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="/">My倉庫</a>
+        <a class="navbar-brand" href="/">MySouko</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
