Improve html template hierarchy

--- a/souko/templates/souko/home.html
+++ b/souko/templates/souko/home.html
@@ -3,7 +3,7 @@
 {% block heading %}
   {% if page_obj.number == 1 %}
     <div class="mb-4">
-      <h1>ようこそ！</h1>
+      <h1>Welcome!</h1>
     </div>
   {% endif %}
 {% endblock heading %}
