--- a/souko/templates/souko/user_list_all.html
+++ b/souko/templates/souko/user_list_all.html
@@ -1,4 +1,4 @@
-{% extends "souko/item_list.html" %}
+{% extends "souko/user_list.html" %}
 
 {% block list_submenu %}
   <a href="{% url 'user-mylist' view.kwargs.username %}" class="btn btn-info">All Items</a>
