--- a/souko/templates/souko/item_list.html
+++ b/souko/templates/souko/item_list.html
@@ -1,9 +1,7 @@
 {% extends "souko/base.html" %}
 
 {% block content %}
-  <div class="user-list-title mb-4">
-    <h1>{{ view.kwargs.username }}'s List ({{ page_obj.paginator.count }} items)</h1>
-  </div>
+  {% block heading %}{% endblock heading %}
 
   {% if page_obj.paginator.count > 0 %}
     <div class="top-page-selector-container">
@@ -83,28 +81,28 @@
       </div>
     </div>
   </article>
-{% endfor %}
+  {% endfor %}
 
-{% if page_obj.paginator.count > 0 %}
-  <div class="bottom-page-selector">
-    {% if page_obj.has_previous %}
-      <a class="btn btn-outline-orange" href="?page=1">&#x21E4</a>
-      <a class="btn btn-outline-orange" href="?page={{ page_obj.previous_page_number }}">&#x2190</a>
-    {% endif %}
-
-    {% for num in page_obj.paginator.page_range %}
-      {% if page_obj.number == num %}
-        <a class="btn btn-orange" href="?page={{ num }}">{{ num }}</a>
-      {% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'3' %}
-        <a class="btn btn-outline-orange" href="?page={{ num }}">{{ num }}</a>
+  {% if page_obj.paginator.count > 0 %}
+    <div class="bottom-page-selector">
+      {% if page_obj.has_previous %}
+        <a class="btn btn-outline-orange" href="?page=1">&#x21E4</a>
+        <a class="btn btn-outline-orange" href="?page={{ page_obj.previous_page_number }}">&#x2190</a>
       {% endif %}
-    {% endfor %}
 
-    {% if page_obj.has_next %}
-      <a class="btn btn-outline-orange" href="?page={{ page_obj.next_page_number }}">&#x2192</a>
-      <a class="btn btn-outline-orange" href="?page={{ page_obj.paginator.num_pages }}">&#x21E5</a>
-    {% endif %}
-  </div>
-{% endif %}
+      {% for num in page_obj.paginator.page_range %}
+        {% if page_obj.number == num %}
+          <a class="btn btn-orange" href="?page={{ num }}">{{ num }}</a>
+        {% elif num > page_obj.number|add:'-3' and num < page_obj.number|add:'3' %}
+          <a class="btn btn-outline-orange" href="?page={{ num }}">{{ num }}</a>
+        {% endif %}
+      {% endfor %}
+
+      {% if page_obj.has_next %}
+        <a class="btn btn-outline-orange" href="?page={{ page_obj.next_page_number }}">&#x2192</a>
+        <a class="btn btn-outline-orange" href="?page={{ page_obj.paginator.num_pages }}">&#x21E5</a>
+      {% endif %}
+    </div>
+  {% endif %}
 
 {% endblock content %}
