--- a/souko/static/souko/main.css
+++ b/souko/static/souko/main.css
@@ -14,6 +14,7 @@ body {
 
 .main-body {
   margin-top: 100px;
+  margin-bottom: 60px;
 }
 
 .content-section {
@@ -46,12 +47,6 @@ body {
   border-bottom: 2px solid #cfcfcf;
   padding-bottom: 7px;
   width: 95%;
-}
-
-.content-button {
-  visibility: hidden;
-  margin: 3px;
-  float: right;
 }
 
 .content-section:hover .content-button {
@@ -110,27 +105,48 @@ body {
   cursor: pointer;
 }
 
-.top-page-selector-container {
-  width: 100%;
-  height: 55px;
+.content-button {
+  visibility: hidden;
+  margin: 3px;
+  float: right;
 }
 
-.top-page-selector {
-  position: absolute;
-  left: 50%;
-  -ms-transform: translateX(-50%);
-  transform: translateX(-50%);
+.page-selector {
+  text-align: center;
 }
 
-.bottom-page-selector {
-  position: absolute;
-  left: 50%;
-  -ms-transform: translateX(-50%);
-  transform: translateX(-50%);
+.page-selector ul {
+  list-style-type: none;
+  padding: 0;
+  display: inline-block;
 }
 
-.bottom-page-selector a {
-  margin-bottom: 60px;
+.page-selector li {
+  float: left;
+}
+
+.page-button {
+  padding-left: 20px;
+  padding-right: 20px;
+  margin: 0;
+  border-right: 1px solid #cfcfcf;
+}
+
+.page-button:last-of-type {
+  border-right: none;
+}
+
+.page-button a {
+  color: #0099ff;
+}
+
+.page-button a:hover {
+  color: #ee8814;
+}
+
+.current-page a {
+  color: #ee8814;
+  font-weight: bold;
 }
 
 .btn-outline-orange {
