--- a/souko/templates/souko/item_list.html
+++ b/souko/templates/souko/item_list.html
@@ -30,7 +30,7 @@
   <div class="mb-3">
     {% block list_submenu %}{% endblock list_submenu %}
     {% if user.username == view.kwargs.username %}
-      <a href="{% url 'item-create' %}" class="btn btn-primary add-item"><i class="fas fa-plus mr-2"></i>Add Item</a>
+      <a href="{% url 'item-create' %}" class="btn btn-primary float-right-md float-left-sm"><i class="fas fa-plus mr-2"></i>Add Item</a>
     {% endif %}
   </div>
 
