--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -11,6 +11,9 @@
       </fieldset>
       <div class="form-group">
         <button class="btn btn-outline-orange" type="submit">Login</button>
+        <small class="text-muted ml-3">
+          <a href="{% url 'password_reset' %}">Forgot Password?</a>
+        </small>
       </div>
     </form>
     <div class="border-top pt-1">
