--- a/souko/templates/souko/base.html
+++ b/souko/templates/souko/base.html
@@ -37,8 +37,7 @@
 
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <div class="navbar-nav mr-auto">
-            <a class="nav-item nav-link" href="#">About</a>
-            <a class="nav-item nav-link" href="#">Statistics</a>
+            <a class="nav-item nav-link" href="{% url 'souko-about' %}">About</a>
             {% if user.is_authenticated %}
               <a class="nav-item nav-link" href="{% url 'user-mylist' user.username %}">My List</a>
             {% endif %}
@@ -46,7 +45,6 @@
 
           <div class="navbar-nav">
             {% if user.is_authenticated %}
-              <a class="nav-item nav-link" href="#">Profile</a>
               <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
             {% else %}
               <a class="nav-item nav-link" href="{% url 'login' %}">Sign In</a>
