--- a/souko/templates/souko/home.html
+++ b/souko/templates/souko/home.html
@@ -7,7 +7,7 @@
       <p class="mt-4 ml-2 lead">
         This is a website I built to keep track of all of the Japanese media that I consume. <br>
         To create your own list head on over to the <a href="{% url 'register' %}">Register</a> page to get started!<br>
-        For more information on how this site came about, check out the <a href="#">About</a> page.
+        For more information on how this site came about, check out the <a href="{% url 'souko-about' %}">About</a> page.
       </p>
       <p class="mt-4 ml-2 lead">
         Below is my list of all the books, TV shows and games that I've completed entirely in Japanese!
