Display appropriate title for each web page

--- a/souko/templates/souko/about.html
+++ b/souko/templates/souko/about.html
@@ -1,6 +1,10 @@
 {% extends "souko/base.html" %}
 {% load static %}
 
+{% block title %}
+- About
+{% endblock title %}
+
 {% block content %}
   <div class="row">
     <div class="col-md-4 about-me-img">
