--- a/souko/templates/souko/base.html
+++ b/souko/templates/souko/base.html
@@ -25,7 +25,7 @@
     <!-- My CSS -->
     <link rel="stylesheet" href="{% static 'souko/main.css' %}">
 
-    <title>MySouko</title>
+    <title>MySouko {% block title %}{% endblock title %}</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-light bg-orange fixed-top">
