--- a/souko/templates/souko/home.html
+++ b/souko/templates/souko/home.html
@@ -1,5 +1,9 @@
 {% extends "souko/item_list.html" %}
 
+{% block title %}
+- Home
+{% endblock title %}
+
 {% block heading %}
   {% if page_obj.number == 1 %}
     <div class="mb-4">
