--- a/users/templates/users/password_reset_complete.html
+++ b/users/templates/users/password_reset_complete.html
@@ -1,5 +1,9 @@
 {% extends "souko/base.html" %}
 
+{% block title %}
+- Password Recovery
+{% endblock title %}
+
 {% block content %}
   <div class="alert alert-info">
     Your password has been set.
