--- a/users/templates/users/password_reset_confirm.html
+++ b/users/templates/users/password_reset_confirm.html
@@ -1,6 +1,10 @@
 {% extends "souko/base.html" %}
 {% load crispy_forms_tags %}
 
+{% block title %}
+- Password Recovery
+{% endblock title %}
+
 {% block content %}
   <div class="content-section">
     <form method="POST">
