--- a/users/templates/users/password_reset_done.html
+++ b/users/templates/users/password_reset_done.html
@@ -1,5 +1,9 @@
 {% extends "souko/base.html" %}
 
+{% block title %}
+- Password Recovery
+{% endblock title %}
+
 {% block content %}
   <div class="alert alert-info">
     An email has been sent with instructions on how to reset your password.
