--- a/souko/templates/souko/base.html
+++ b/souko/templates/souko/base.html
@@ -66,10 +66,19 @@
           {% endif %}
           
           {% block content %}{% endblock %}
+
+          <div class="footer">
+            <small class="text-muted">
+              Contact Me:
+              <span class="footer-section"><i class="fas fa-envelope"></i> jacobcuke@gmail.com</span>
+              <span class="footer-section"><i class="fab fa-github"></i> <a href="https://github.com/JacobCuke">GitHub</a></span>
+              <span class="footer-section"><i class="fas fa-book"></i> <a href="#">Personal Website</a></span>
+            </small>
+            <small class="text-muted">
+              <br>Favicon provided by <a href="https://icons8.com/">Icons8</a>
+            </small>
+          </div>
         </div>
-      </div>
-      <div class="footer">
-        <small class="text-muted">Contact Me: jacobcuke@gmail.com   GitHub    Favicon provided by <a href="https://icons8.com/">Icons8</a></small>
       </div>
     </div>
 
