Move file storage to AWS S3

--- a/souko/templates/souko/base.html
+++ b/souko/templates/souko/base.html
@@ -70,8 +70,12 @@
           <div class="footer">
             <small class="text-muted">
               Contact Me:
-              <span class="footer-section"><i class="fas fa-envelope"></i> jacobcuke@gmail.com</span>
-              <span class="footer-section"><i class="fab fa-github"></i> <a href="https://github.com/JacobCuke">GitHub</a></span>
+              <span class="footer-section">
+                <i class="fas fa-envelope"></i> <a href="mailto:jacobcuke@gmail.com">jacobcuke@gmail.com</a>
+              </span>
+              <span class="footer-section"><i class="fab fa-github">
+                </i> <a href="https://github.com/JacobCuke">GitHub</a>
+              </span>
               <span class="footer-section"><i class="fas fa-book"></i> <a href="#">Personal Website</a></span>
             </small>
             <small class="text-muted">
