Make external links open in a new tab

--- a/souko/templates/souko/base.html
+++ b/souko/templates/souko/base.html
@@ -72,12 +72,12 @@
         <small class="text-muted">
           Contact Me:
           <span class="footer-section">
-            <i class="fas fa-envelope"></i> <a href="mailto:jacobcuke@gmail.com">jacobcuke@gmail.com</a>
+            <i class="fas fa-envelope"></i> <a href="mailto:jacobcuke@gmail.com" target="_blank">jacobcuke@gmail.com</a>
           </span>
           <span class="footer-section"><i class="fab fa-github">
-            </i> <a href="https://github.com/JacobCuke">GitHub</a>
+            </i> <a href="https://github.com/JacobCuke" target="_blank">GitHub</a>
           </span>
-          <span class="footer-section"><i class="fas fa-book"></i> <a href="https://pages.cpsc.ucalgary.ca/~jacob.cuke/">Personal Website</a></span>
+          <span class="footer-section"><i class="fas fa-book"></i> <a href="https://pages.cpsc.ucalgary.ca/~jacob.cuke/" target="_blank">Personal Website</a></span>
         </small>
         <small class="text-muted">
           <br>Favicon provided by <a href="https://icons8.com/">Icons8</a>
