--- a/souko/templates/souko/about.html
+++ b/souko/templates/souko/about.html
@@ -17,14 +17,14 @@
   </div>
   <div class="about-me-content ml-4">
     <p class="lead">
-      Hello! My name is Jacob Cuke and I am an undergraduate in Computer Science at the University of Calgary, graduating in May of 2021. I focus mainly on web application development and database management.
+      Hello! My name is Jacob Cuke and I am a graduate of Computer Science from the University of Calgary. I currently work as a full stack web developer, but am also pursing a career in Japanese to English translation.
     </p>
     <h2 class="mt-4">MySouko</h2>
     <p class="lead mt-3">
-      Over the past 4 years I have taught myself Japanese to fluency, and have studied both Computer Science and Japanese culture at Senshu University in Tokyo. I was in the middle of an exchange program in Japan when the COVID-19 pandemic first hit in March 2020, forcing me to come back to Canada earlier than expected.
+      Over the past 5 years I have taught myself Japanese to fluency, and have also studied both Computer Science and Japanese culture entirely in Japanese at Senshu University in Tokyo. I was in the middle of an exchange program in Japan when the COVID-19 pandemic first hit in March 2020, forcing me to come back to Canada earlier than expected.
     </p>
     <p class="lead">
-      In order to maintain and further improve my Japanese in the midst of the lockdown, I began consuming Japanese books and TV shows on a daily basis. In addition to being a hobby that I enjoy, it allowed me to reach a point where reading Japanese has become almost as effortless as reading English.
+      In order to maintain and further improve my Japanese in the midst of the lockdown, I began consuming Japanese books, TV shows and games in my spare time. In addition to being a hobby that I enjoy, this practice has allowed me to reach a deep understanding of the Japanese language, to the point where reading Japanese has become almost as effortless as reading English.
     </p>
     <p class="lead">
       MySouko, comes from the Japanese word 倉庫(souko) meaning storehouse or warehouse. This site was an attempt to combine my love of Japanese and web development, to create a platform where I could keep a record of all the Japanese media I have consumed since beginning this endeavour in March 2020.
