--- a/souko/templates/souko/about.html
+++ b/souko/templates/souko/about.html
@@ -24,7 +24,7 @@
       Over the past 5 years I have taught myself Japanese to fluency, and have also studied both Computer Science and Japanese culture entirely in Japanese at Senshu University in Tokyo. I was in the middle of an exchange program in Japan when the COVID-19 pandemic first hit in March 2020, forcing me to come back to Canada earlier than expected.
     </p>
     <p class="lead">
-      In order to maintain and further improve my Japanese in the midst of the lockdown, I began consuming Japanese books, TV shows and games in my spare time. In addition to being a hobby that I enjoy, this practice has allowed me to reach a deep understanding of the Japanese language, to the point where reading Japanese has become almost as effortless as reading English.
+      In order to maintain and further improve my Japanese in the midst of the lockdown, I began consuming Japanese books, TV shows and games in my spare time. In addition to being a hobby that I enjoy, this practice has allowed me to reach a deep level of understanding of the Japanese language, to the point where reading Japanese has become almost as effortless as reading English.
     </p>
     <p class="lead">
       MySouko, comes from the Japanese word 倉庫(souko) meaning storehouse or warehouse. This site was an attempt to combine my love of Japanese and web development, to create a platform where I could keep a record of all the Japanese media I have consumed since beginning this endeavour in March 2020.
