Update portfolio website link

--- a/souko/templates/souko/base.html
+++ b/souko/templates/souko/base.html
@@ -77,7 +77,7 @@
           <span class="footer-section"><i class="fab fa-github">
             </i> <a href="https://github.com/JacobCuke" target="_blank">GitHub</a>
           </span>
-          <span class="footer-section"><i class="fas fa-book"></i> <a href="https://pages.cpsc.ucalgary.ca/~jacob.cuke/" target="_blank">Personal Website</a></span>
+          <span class="footer-section"><i class="fas fa-book"></i> <a href="https://www.jacobcuke.com/" target="_blank">Personal Website</a></span>
         </small>
         <small class="text-muted">
           <br>Favicon provided by <a href="https://icons8.com/">Icons8</a>
