--- a/souko/templates/souko/about.html
+++ b/souko/templates/souko/about.html
@@ -17,7 +17,7 @@
   </div>
   <div class="about-me-content ml-4">
     <p class="lead">
-      Hello! My name is Jacob Cuke and I am a graduate of Computer Science from the University of Calgary. I currently work as a full stack web developer, and hope to one day live and work in Japan.
+      Hello! My name is Jacob Cuke and I am a graduate of Computer Science from the University of Calgary. I currently work as a Full Stack Web Developer, and have a great love for the country of Japan and the Japanese language.
     </p>
     <h2 class="mt-4">MySouko</h2>
     <p class="lead mt-3">
